# Trackito

./: README.md  devlog.md  docker-compose.yml
api/: .dockerignore  Dockerfile  README.md  requirements.txt
api/app/: main.py
discord/: .gitignore  Dockerfile  README.md  devlog.md  pyproject.toml  requirements.txt
discord/app/: main.py
